Continuation du site, il ne reste plus qu à y rajouter la donnée

--- a/newscrawler/templates/generic.html
+++ b/newscrawler/templates/generic.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Introspect by TEMPLATED</title>
+		<title>Xmas Movies</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -33,21 +33,40 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="index.html" class="logo">introspect</a>
+					<a href="{{ url_for('home_page')}}" class="logo">Xmas Movies</a>
 					<nav id="nav">
 						<a href="{{ url_for('home_page')}}">Home</a>
-						<a href="{{ url_for('info_page')}}">Generic</a>
-						<a href="{{ url_for('search_page')}}">Elements</a>
+						<a href="{{ url_for('info_page')}}">Information</a>
+						<a href="{{ url_for('search_page')}}">Search Engine</a>
 					</nav>
 				</div>
 			</header>
 			<a href="#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 
 		<!-- Main -->
+		<section id="main">
+			<div class="inner">
+				<header class="major special">
+					<h1>Some information about this project</h1>
+					<p></p>
+					<p>This project was carried out as part of the <u>Data_Engineering</u> unit project.<p>
+					<p>It's a work in pairs with the objectives of retrieving data from a website, storing it and putting it forward on a site programmed with Flask.</p>
+					<p>Our choice fell on the Allociné site and on the collection of Christmas films,
+					in order to create a search engine dedicated to the various films on the Christmas theme.</p>
+					<p>It has been shown that Christmas movies are good for one's mood, and that in a period of covid,
+					Christmas movies have been watched more than in other years: 20% of people started watching
+					them in August, 37% during the month of September, and 80% of the people surveyed said they
+					watched more Christmas movies in 2020 than ever.</p>
+					<p>We hope you enjoy this project and find your next favorite Christmas movie !</p>
+				</header>
+			</div>
+		</section>
+
+<!--
 			<section id="main" >
 				<div class="inner">
 					<header class="major special">
-						<h1>Generic</h1>
+						<h1>Information</h1>
 						<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
 					</header>
 					<a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a>
@@ -56,8 +75,9 @@
 					<p>Amet nibh adipiscing adipiscing. Commodo ante vis placerat interdum massa massa primis. Tempus condimentum tempus non ac varius cubilia adipiscing placerat lorem turpis at. Aliquet lorem porttitor interdum. Amet lacus. Aliquam lobortis faucibus blandit ac phasellus. In amet magna non interdum volutpat porttitor metus a ante ac neque. Nisi turpis. Commodo col. Interdum adipiscing mollis ut aliquam id ante adipiscing commodo integer arcu amet blandit adipiscing arcu ante.</p>
 				</div>
 			</section>
-
+-->
 		<!-- Footer -->
+<!--
 			<section id="footer">
 				<div class="inner">
 					<header>
@@ -85,7 +105,7 @@
 					</div>
 				</div>
 			</section>
-
+-->
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
