--- a/newscrawler/templates/elements.html
+++ b/newscrawler/templates/elements.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Introspect by TEMPLATED</title>
+		<title>Xmas Movies</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -31,27 +31,30 @@
 	<body>
 
 		<!-- Header -->
+		
 			<header id="header">
 				<div class="inner">
-					<a href="index.html" class="logo">introspect</a>
+					<a href="{{ url_for('home_page')}}" class="logo">Xmas Movies</a>
 					<nav id="nav">
 						<a href="{{ url_for('home_page')}}">Home</a>
-						<a href="{{ url_for('info_page')}}">Generic</a>
-						<a href="{{ url_for('search_page')}}">Elements</a>
+						<a href="{{ url_for('info_page')}}">Information</a>
+						<a href="{{ url_for('search_page')}}">Search Engine</a>
 					</nav>
 				</div>
 			</header>
 			<a href="#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 
 		<!-- Main -->
+		<!--
 			<section id="main">
 				<div class="inner">
 					<header class="major special">
 						<h1>Elements</h1>
 						<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
 					</header>
-
+-->
 					<!-- Text -->
+					<!--
 						<section>
 							<h3>Text</h3>
 							<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
@@ -95,8 +98,9 @@ i++;
 
 print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						</section>
-
+-->
 					<!-- Lists -->
+					<!--
 						<section>
 							<h3>Lists</h3>
 							<div class="row">
@@ -184,8 +188,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 								</div>
 							</div>
 						</section>
-
+-->
 					<!-- Table -->
+					<!--
 						<section>
 							<h3>Table</h3>
 							<h4>Default</h4>
@@ -279,8 +284,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 								</table>
 							</div>
 						</section>
+						-->
 
 					<!-- Buttons -->
+					<!--
 						<section>
 							<h3>Buttons</h3>
 							<ul class="actions">
@@ -318,16 +325,20 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 								<li><span class="button alt disabled">Alternate</span></li>
 							</ul>
 						</section>
-
+					-->
 					<!-- Form -->
+					
 						<section>
-							<h3>Form</h3>
+							<div class="inner">
+								<header class="major special">
+							<p></p>
+							<h2>Form</h2>
 							<form method="post" action="#">
 								<div class="row uniform 50%">
 									<div class="6u 12u$(xsmall)">
-										<input type="text" name="demo-name" id="demo-name" value="" placeholder="Name" />
+										<input type="text" name="demo-name" id="demo-name" value="" placeholder="Name the movie you want to watch or its keyword" />
 									</div>
-									<div class="6u$ 12u$(xsmall)">
+									<!--<div class="6u$ 12u$(xsmall)">
 										<input type="email" name="demo-email" id="demo-email" value="" placeholder="Email" />
 									</div>
 									<div class="12u$">
@@ -370,11 +381,14 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 											<li><input type="reset" value="Reset" /></li>
 										</ul>
 									</div>
-								</div>
+								</div>-->
 							</form>
+							</header>
+							</div>
 						</section>
-
+					
 					<!-- Image -->
+					<!--
 						<section>
 							<h3>Image</h3>
 							<h4>Fit</h4>
@@ -400,8 +414,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				</div>
 			</section>
-
+-->
 		<!-- Footer -->
+		<!--
 			<section id="footer">
 				<div class="inner">
 					<header>
@@ -429,7 +444,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					</div>
 				</div>
 			</section>
-
+-->
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
