--- a/newscrawler/templates/index.html
+++ b/newscrawler/templates/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Introspect by TEMPLATED</title>
+		<title>Xmas Movies</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -34,11 +34,11 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="{{ url_for('home_page')}}" class="logo">introspect</a>
+					<a href="{{ url_for('home_page')}}" class="logo">Xmas Movies</a>
 					<nav id="nav">
 						<a href="{{ url_for('home_page')}}">Home</a>
-						<a href="{{ url_for('info_page')}}">Generic</a>
-						<a href="{{ url_for('search_page')}}">Elements</a>
+						<a href="{{ url_for('info_page')}}">Information</a>
+						<a href="{{ url_for('search_page')}}">Search Engine</a>
 					</nav>
 				</div>
 			</header>
@@ -47,10 +47,10 @@
 		<!-- Banner -->
 			<section id="banner">
 				<div class="inner">
-					<h1>Introspect: <span>A free + fully responsive<br />
-					site template by TEMPLATED</span></h1>
+					<h1>Xmas Movies: <span>a free and efficient search engine<br />
+					to find out what next Christmas movie you are going to watch!</span></h1>
 					<ul class="actions">
-						<li><a href="{{ url_for('search_page')}}" class="button alt">Trouver un film</a></li>
+						<li><a href="{{ url_for('search_page')}}" class="button alt">Find a movie</a></li>
 					</ul>
 				</div>
 			</section>
@@ -59,17 +59,17 @@
 			<section id="one">
 				<div class="inner">
 					<header>
-						<h2>Magna Etiam Lorem</h2>
+						<h2>Check out the top rated Christmas movies right now!</h2>
 					</header>
-					<p>Suspendisse mauris. Fusce accumsan mollis eros. Pellentesque a diam sit amet mi ullamcorper vehicula. Integer adipiscin sem. Nullam quis massa sit amet nibh viverra malesuada. Nunc sem lacus, accumsan quis, faucibus non, congue vel, arcu, erisque hendrerit tellus. Integer sagittis. Vivamus a mauris eget arcu gravida tristique. Nunc iaculis mi in ante.</p>
+					<p>Xmas Movies has selected the top rated movies that you absolutely must see.</p>
 					<ul class="actions">
-						<li><a href="#" class="button alt">Learn More</a></li>
+						<li><a href="{{ url_for('search_page')}}" class="button alt">I want to see them</a></li>
 					</ul>
 				</div>
 			</section>
 
 		<!-- Two -->
-			<section id="two">
+<!--			<section id="two">
 				<div class="inner">
 					<article>
 						<div class="content">
@@ -95,9 +95,9 @@
 					</article>
 				</div>
 			</section>
-
+-->
 		<!-- Three -->
-			<section id="three">
+<!--			<section id="three">
 				<div class="inner">
 					<article>
 						<div class="content">
@@ -137,12 +137,13 @@
 					</article>
 				</div>
 			</section>
-
+-->
 		<!-- Footer -->
 			<section id="footer">
 				<div class="inner">
 					<div class="copyright">
-						&copy; Untitled Design: <a href="https://templated.co/">TEMPLATED</a>. Images <a href="https://unsplash.com/">Unsplash</a>
+<!--						&copy; Untitled Design: <a href="https://templated.co/">TEMPLATED</a>. Images <a href="https://unsplash.com/">Unsplash</a>
+-->			
 					</div>
 				</div>
 			</section>
