--- a/newscrawler/templates/generic.html
+++ b/newscrawler/templates/generic.html
@@ -36,7 +36,7 @@
 					<a href="{{ url_for('home_page')}}" class="logo">Xmas Movies</a>
 					<nav id="nav">
 						<a href="{{ url_for('home_page')}}">Home</a>
-						<a href="{{ url_for('info_page')}}">Information</a>
+						<a href="{{ url_for('info_page')}}">Top Rated</a>
 						<a href="{{ url_for('search_page')}}">Search Engine</a>
 					</nav>
 				</div>
