--- a/newscrawler/templates/index.html
+++ b/newscrawler/templates/index.html
@@ -37,8 +37,8 @@
 					<a href="{{ url_for('home_page')}}" class="logo">Xmas Movies</a>
 					<nav id="nav">
 						<a href="{{ url_for('home_page')}}">Home</a>
-						<a href="{{ url_for('info_page')}}">Information</a>
-						<a href="{{ url_for('search_page')}}">Search Engine</a>
+						<a href="{{ url_for('info_page')}}">Top Rated</a>
+						<a href="{{ url_for('search_page')}}">Search</a>
 					</nav>
 				</div>
 			</header>
@@ -63,7 +63,7 @@
 					</header>
 					<p>Xmas Movies has selected the top rated movies that you absolutely must see.</p>
 					<ul class="actions">
-						<li><a href="{{ url_for('search_page')}}" class="button alt">I want to see them</a></li>
+						<li><a href="{{ url_for('info_page')}}" class="button alt">I want to see them</a></li>
 					</ul>
 				</div>
 			</section>
@@ -97,44 +97,21 @@
 			</section>
 -->
 		<!-- Three -->
-<!--			<section id="three">
+			<section id="three">
 				<div class="inner">
-					<article>
-						<div class="content">
-							<span class="icon fa-laptop"></span>
-							<header>
-								<h3>Tempus Feugiat</h3>
-							</header>
-							<p>Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna lorem ullamcorper laoreet, lectus arcu.</p>
-							<ul class="actions">
-								<li><a href="#" class="button alt">Learn More</a></li>
-							</ul>
-						</div>
-					</article>
-					<article>
-						<div class="content">
-							<span class="icon fa-diamond"></span>
-							<header>
-								<h3>Aliquam Nulla</h3>
-							</header>
-							<p>Ut convallis, sem sit amet interdum consectetuer, odio augue aliquam leo, nec dapibus tortor nibh sed.</p>
-							<ul class="actions">
-								<li><a href="#" class="button alt">Learn More</a></li>
-							</ul>
-						</div>
-					</article>
-					<article>
-					<div class="content">
-							<span class="icon fa-laptop"></span>
-							<header>
-								<h3>Sed Magna</h3>
-							</header>
-							<p>Suspendisse mauris. Fusce accumsan mollis eros. Pellentesque a diam sit amet mi ullamcorper vehicula.</p>
-							<ul class="actions">
-								<li><a href="#" class="button alt">Learn More</a></li>
-							</ul>
-						</div>
-					</article>
+					<header class="major special">
+						<h1>Some information about this project</h1>
+						<p></p>
+						<p>This project was carried out as part of the <u>Data_Engineering</u> unit project.<p>
+						<p>It's a work in pairs with the objectives of retrieving data from a website, storing it and putting it forward on a site programmed with Flask.</p>
+						<p>Our choice fell on the Allociné site and on the collection of Christmas films,
+						in order to create a search engine dedicated to the various films on the Christmas theme.</p>
+						<p>It has been shown that Christmas movies are good for one's mood, and that in a period of covid,
+						Christmas movies have been watched more than in other years: 20% of people started watching
+						them in August, 37% during the month of September, and 80% of the people surveyed said they
+						watched more Christmas movies in 2020 than ever.</p>
+						<p>We hope you enjoy this project and find your next favorite Christmas movie !</p>
+					</header>
 				</div>
 			</section>
 -->
