--- a/newscrawler/templates/index.html
+++ b/newscrawler/templates/index.html
@@ -104,7 +104,7 @@
 						<p></p>
 						<p>This project was carried out as part of the <u>Data_Engineering</u> unit project.<p>
 						<p>It's a work in pairs with the objectives of retrieving data from a website, storing it and putting it forward on a site programmed with Flask.</p>
-						<p>Our choice fell on the Allociné site and on the collection of Christmas films,
+						<p>Our choice fell on the SensCritique website and on the collection of Christmas films,
 						in order to create a search engine dedicated to the various films on the Christmas theme.</p>
 						<p>It has been shown that Christmas movies are good for one's mood, and that in a period of covid,
 						Christmas movies have been watched more than in other years: 20% of people started watching
