--- a/newscrawler/templates/elements.html
+++ b/newscrawler/templates/elements.html
@@ -38,7 +38,7 @@
 					<nav id="nav">
 						<a href="{{ url_for('home_page')}}">Home</a>
 						<a href="{{ url_for('info_page')}}">Top Rated</a>
-						<a href="{{ url_for('search_page')}}">Search Engine</a>
+						<a href="{{ url_for('search_page')}}">Search</a>
 					</nav>
 				</div>
 			</header>
